# true-ledger-core-genesis

./: README.md
true_ledger_segment1/: Cargo.toml  genesis_transaction.json
true_ledger_segment1/src/: main.rs
true_ledger_segment2_verifier/: Cargo.toml
true_ledger_segment2_verifier/src/: main.rs
