[package]
name = "true_ledger_segment1"
version = "0.1.0"
edition = "2021"

[dependencies]
# For JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For Cryptography (Locked to 1.0.1 for stable imports)
ed25519-dalek = { version = "1.0.1", features = ["serde"] } 
sha2 = "0.10"
hex = "0.4"

# RAND FIX: Use compatible versions of rand and introduce rand_core
rand = "0.7"
rand_core = "0.5" # This is often the missing piece for trait satisfaction

# For DIDs and Multibase
multibase = "0.9"